# Converter

./: CMakeLists.txt  Doxyfile.in
forms/: form_gui.ui  mainwindow.ui
include/: form_gui.h  mainwindow.h
resourse/: Duna.fb2  Duna.txt
src/: form_gui.cpp  mainwindow.cpp
